# progettoTetris

./: README.md
tetris/: classe_matrice.h  classe_tetramino.h  funz_array.h
tetris _alfa_1_0/: CMakeLists.txt  classe_griglia.h  classe_matrice.cpp  classe_tetramino.cpp  funz_array.cpp  main.cpp  sketch_movimento.txt
tetris _alfa_1_0/cmake/: FindNCURSESW.cmake
